# qni-core-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json
api/: CMakeLists.txt
api/protos/: README.md  qni-api.proto
include/: CMakeLists.txt  qni-connector.h  qni-connector.hpp  qni-console.hpp  qni-extern.hpp  qni-hub.hpp  qni-program.hpp  qni.h  qni.hpp
include/api/: CMakeLists.txt
include/internal/: qni-deleter.hpp
include/qni/: qni-connector.hpp  qni-hub.hpp
include/qni/api/: qni-api.pb.cc  qni-api.pb.h
qni-api/: CMakeLists.txt
src/: CMakeLists.txt  qni-connector.cc  qni-connector.cpp  qni-console.cpp  qni-extern.cpp  qni-hub.cpp  qni.cc  qni.cpp
src/internal/: qni-deleter.cpp
